--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@ ul > li {
 .container {
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 1fr 6fr;
   height: 100vh;
   width: 100vw;
 }
@@ -94,23 +94,28 @@ ul > li {
   background-color: var(--projects-bg-color);
   grid-column: 2/3;
   display: grid;
-  grid-template-columns: repeat(2, 1fr) 0.5fr;
+  /* grid-template-columns: repeat(2, 1fr) 0.5fr; */
+  grid-template-rows: 0.15fr 2fr 0.15fr;
 }
 
 .content-project1 {
   display: grid;
-  grid-template-rows: 0.2fr repeat(3, 2fr) 0.2fr;
-  padding: 15px;
-  gap: 25px;
+  grid-template-columns: repeat(2, 1fr) 0.5fr;
+  padding: 10px;
 }
 
 .content-project2 {
 }
 
-.content-project3 {
+.content {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-
 .content-card {
-  background-color: #d4d4d8;
-  border-radius: 25px;
+  border: 1px solid black;
+  background-color: #ebebf5;
+  border-radius: 15px;
 }
