--- a/public/style.css
+++ b/public/style.css
@@ -12,11 +12,24 @@ body {
   margin: 0%;
 }
 
+h1,
+h2 {
+  margin: 0%;
+  padding: 0%;
+}
+
 h1 {
   font-size: 1.5rem;
   font-weight: 400;
-  margin: 0%;
+}
+h2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+p {
   padding: 0%;
+  margin: 0%;
 }
 
 ul {
@@ -77,7 +90,7 @@ ul > li {
 
 .sidebar ul > li:hover,
 :focus {
-  color: #fb923c;
+  color: black;
 }
 
 .icon-header {
@@ -139,5 +152,27 @@ ul > li {
   background-color: #ebebf5;
   border-left: 10px solid orange;
   border-radius: 10px;
+  padding: 15px;
+}
+
+.link-icon {
+  display: inline-block;
+  justify-content: start;
+  text-align: right;
+  position: relative;
+  top: 25%;
+  left: 70%;
+}
+
+.link-icon-pd {
+  padding: 10px;
+}
+
+.announcements,
+.trending {
+  background-color: #ebebf5;
+  border-radius: 10px;
   display: grid;
+  grid-template-rows: 1fr 4fr;
+  padding: 15px;
 }
