--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,10 @@ h2 {
   font-size: 1.2rem;
   font-weight: 500;
 }
+h3 {
+  font-size: 0.8rem;
+  font-weight: 400;
+}
 
 p {
   padding: 0%;
@@ -60,18 +64,54 @@ ul > li {
 }
 
 .header-bottom {
+  display: flex;
+  position: relative;
+}
+
+.button {
+  position: absolute;
+  bottom: 24px;
+  right: 60px;
+}
+
+.button button {
+  border: none;
+  width: 128px;
+  height: 32px;
+  border-radius: 25px;
+  margin-left: 10px;
+}
+
+.button button:focus {
+  background-color: #fb923c;
+  color: white;
+}
+
+.button button:hover {
+  background-color: #fb923c;
+  color: black;
 }
 
 .search-bar {
-  background-color: red;
+  background-color: #a1a1aa;
   width: 700px;
   height: 25px;
+  border-radius: 12px;
   vertical-align: center;
   position: absolute;
   bottom: 12.5px;
   left: 75px;
 }
 
+.search-bar:hover {
+  border: 1px solid #fb923c;
+  background-color: blue;
+}
+
+.search-bar p {
+  position: absolute;
+  left: 12px;
+}
 .search-icon {
   position: absolute;
   width: 24px;
@@ -85,22 +125,49 @@ ul > li {
   width: 24px;
   height: 24px;
   bottom: 12px;
-  right: 250px;
+  right: 270px;
 }
 
 .profile-icon {
   position: absolute;
-  width: 24px;
-  height: 24px;
-  bottom: 12px;
+  width: 48px;
+  height: 48px;
+  bottom: 0;
   right: 200px;
+  border-radius: 25px;
+}
+
+.profile-icon-left {
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  bottom: 12px;
+  left: 40px;
+  border-radius: 35px;
 }
 
 .profile-name {
-  display: flex;
   position: absolute;
   bottom: 12px;
-  right: 80px;
+  right: 100px;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.profile-name-left {
+  position: absolute;
+  bottom: 15px;
+  left: 110px;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.hello {
+  position: absolute;
+  bottom: 40px;
+  left: 110px;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .sidebar {
