--- a/public/style.css
+++ b/public/style.css
@@ -310,8 +310,13 @@ ul > li {
   background-color: #ebebf5;
   border-radius: 10px;
   padding: 15px;
+  padding-left: 25px;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
+  position: relative;
+}
+
+.trending-profile {
   position: relative;
 }
 
@@ -320,6 +325,18 @@ ul > li {
   width: 48px;
   height: 48px;
   border-radius: 25px;
+}
+
+.trending-project {
+  position: absolute;
+  top: 20px;
+  font-weight: 300;
+  color: #a1a1aa;
+}
+
+.trending div > p {
+  position: absolute;
+  left: 75px;
 }
 
 .trending ul > li {
